--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    "no-unused-vars": "off",          // Disable unused variables rule
+    "@typescript-eslint/no-explicit-any": "off" // Disable explicit any rule
+  }
 }
